making the master data file with spikes and natural image stimulus

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -6317,13 +6317,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 minutes / 90.199917 minutes\n",
+      "10 minutes / 90.199917 minutes\n",
+      "20 minutes / 90.199917 minutes\n",
+      "30 minutes / 90.199917 minutes\n",
+      "40 minutes / 90.199917 minutes\n",
+      "50 minutes / 90.199917 minutes\n",
+      "60 minutes / 90.199917 minutes\n",
+      "70 minutes / 90.199917 minutes\n",
+      "80 minutes / 90.199917 minutes\n",
+      "90 minutes / 90.199917 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "interpnd(f['expt5/timestamps'][:], f['expt5/stim'], tax, 'natural_scenes_stimulus_norepeats_v8.h5', data_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test new file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "new_stim_file = data_dir + 'natural_scenes_stimulus_norepeats_v8.h5'\n",
+    "g = h5py.File(new_stim_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'stimulus']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 3)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g['stimulus'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200,)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bspk.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  15.,  503.,  961.], dtype=float32)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g['stimulus']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final file should have three datasets, 'spikes', 'images', and 'stimulus'. All should be integer arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "all_binned_spikes = []\n",
+    "for c in range(num_cells):\n",
+    "    bspk, tax = pyret.spiketools.binspikes(np.array(cells[c]), binsize=0.01)\n",
+    "    if c == 0:\n",
+    "        max_duration = len(bspk)\n",
+    "    # last two cells are crap\n",
+    "    if c < 5:\n",
+    "        all_binned_spikes.append(np.expand_dims(bspk[:max_duration], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "original_time = f['expt5/timestamps'][:]\n",
+    "original_values = f['expt5/stim'][:].astype('int')\n",
+    "original_values[:,0] -= 1 # convert from Matlab to Python indexing\n",
+    "new_time = tax\n",
+    "filename = 'natural_scenes_stimulus_compressed.h5'\n",
+    "filepath = data_dir\n",
+    "\n",
+    "# Stimulus dataset\n",
+    "large_number = 10 # needs to be larger than largest t - original-time\n",
+    "duration = np.max(new_time)\n",
+    "new_values_shape = returnTuple(new_time.shape[0], *original_values.shape[1:])\n",
+    "if filepath:\n",
+    "    fname = filepath + filename\n",
+    "else:\n",
+    "    fname = filename\n",
+    "new_file = h5py.File(fname, \"w\")\n",
+    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='f')\n",
+    "for idt,t in enumerate(new_time):\n",
+    "    if np.bitwise_and((t % (60*10)) >= 0.0, (t % (60*10)) <= 0.01):\n",
+    "        print '%d minutes / %f minutes' %(t/60., duration/60.)\n",
+    "    time_til_frame = t - original_time\n",
+    "    which_value = np.argmin(np.where(time_til_frame > 0, time_til_frame, large_number))\n",
+    "    new_values[idt] = original_values[which_value]\n",
+    "new_file.close()\n",
+    "\n",
+    "# Spikes dataset\n",
+    "\n",
+    "\n",
+    "new_spikes = new_file.create_dataset(\"spikes\", "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 5)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack(all_binned_spikes).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(541200, 1), (541200, 1), (541200, 1), (541200, 1), (541200, 1)]"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[all_binned_spikes[c].shape for c in range(len(all_binned_spikes))]"
    ]
   },
   {
