--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -6469,34 +6469,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 216,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "all_binned_spikes = []\n",
+    "cell_idx = []\n",
     "for c in range(num_cells):\n",
     "    bspk, tax = pyret.spiketools.binspikes(np.array(cells[c]), binsize=0.01)\n",
+    "    bspk = bspk.astype('int')\n",
     "    if c == 0:\n",
     "        max_duration = len(bspk)\n",
+    "        new_time = tax\n",
     "    # last two cells are crap\n",
-    "    if c < 5:\n",
-    "        all_binned_spikes.append(np.expand_dims(bspk[:max_duration], 1))"
+    "    if len(bspk) >= max_duration:\n",
+    "        all_binned_spikes.append(np.expand_dims(bspk[:max_duration], 1))\n",
+    "        cell_idx.append(c) # cells 7, 15, 16 are skipped\n",
+    "all_spikes = np.hstack(all_binned_spikes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cell_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 minutes / 90.199917 minutes\n",
+      "10 minutes / 90.199917 minutes\n",
+      "20 minutes / 90.199917 minutes\n",
+      "30 minutes / 90.199917 minutes\n",
+      "40 minutes / 90.199917 minutes\n",
+      "50 minutes / 90.199917 minutes\n",
+      "60 minutes / 90.199917 minutes\n",
+      "70 minutes / 90.199917 minutes\n",
+      "80 minutes / 90.199917 minutes\n",
+      "90 minutes / 90.199917 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "original_time = f['expt5/timestamps'][:]\n",
     "original_values = f['expt5/stim'][:].astype('int')\n",
     "original_values[:,0] -= 1 # convert from Matlab to Python indexing\n",
-    "new_time = tax\n",
     "filename = 'natural_scenes_stimulus_compressed.h5'\n",
     "filepath = data_dir\n",
     "\n",
@@ -6509,24 +6552,28 @@
     "else:\n",
     "    fname = filename\n",
     "new_file = h5py.File(fname, \"w\")\n",
-    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='f')\n",
+    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='i')\n",
     "for idt,t in enumerate(new_time):\n",
     "    if np.bitwise_and((t % (60*10)) >= 0.0, (t % (60*10)) <= 0.01):\n",
     "        print '%d minutes / %f minutes' %(t/60., duration/60.)\n",
     "    time_til_frame = t - original_time\n",
     "    which_value = np.argmin(np.where(time_til_frame > 0, time_til_frame, large_number))\n",
     "    new_values[idt] = original_values[which_value]\n",
-    "new_file.close()\n",
     "\n",
     "# Spikes dataset\n",
+    "new_spikes = new_file.create_dataset(\"spikes\", all_spikes.shape, dtype='i')\n",
+    "new_spikes = all_spikes\n",
     "\n",
+    "# Images dataset\n",
+    "new_images = new_file.create_dataset(\"images\", f['images'].shape, dtype='f')\n",
+    "new_images = f['images']\n",
     "\n",
-    "new_spikes = new_file.create_dataset(\"spikes\", "
+    "new_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -6534,21 +6581,21 @@
     {
      "data": {
       "text/plain": [
-       "(541200, 5)"
+       "5091.9949999999999"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.hstack(all_binned_spikes).shape"
+    "duration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -6556,16 +6603,190 @@
     {
      "data": {
       "text/plain": [
-       "[(541200, 1), (541200, 1), (541200, 1), (541200, 1), (541200, 1)]"
+       "84.866583333333338"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[all_binned_spikes[c].shape for c in range(len(all_binned_spikes))]"
+    "duration/60."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 13)"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_spikes.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test full file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "new_stim_file = data_dir + 'natural_scenes_stimulus_compressed.h5'\n",
+    "h = h5py.File(new_stim_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'images', u'spikes', u'stimulus']"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25, 1519, 1007)"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h['images'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 13)"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h['spikes'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 3)"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h['stimulus'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 14, 507, 963], dtype=int32)"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h['stimulus'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(h['stimulus'][:,0])"
    ]
   },
   {
