rewrote experimental dataset, this time correctly saving image data

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -93,6 +93,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  15.,  507.,  963.])"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f['expt5/stim'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {
     "collapsed": false
@@ -6469,7 +6491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 234,
    "metadata": {
     "collapsed": true
    },
@@ -6492,7 +6514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
@@ -6503,7 +6525,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6514,7 +6536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 236,
    "metadata": {
     "collapsed": false
    },
@@ -6540,7 +6562,7 @@
     "original_time = f['expt5/timestamps'][:]\n",
     "original_values = f['expt5/stim'][:].astype('int')\n",
     "original_values[:,0] -= 1 # convert from Matlab to Python indexing\n",
-    "filename = 'natural_scenes_stimulus_compressed.h5'\n",
+    "filename = 'natural_scenes_stimulus_compressed_v2.h5'\n",
     "filepath = data_dir\n",
     "\n",
     "# Stimulus dataset\n",
@@ -6561,63 +6583,17 @@
     "    new_values[idt] = original_values[which_value]\n",
     "\n",
     "# Spikes dataset\n",
-    "new_spikes = new_file.create_dataset(\"spikes\", all_spikes.shape, dtype='i')\n",
-    "new_spikes = all_spikes\n",
+    "new_spikes = new_file.create_dataset(\"spikes\", data=all_spikes)\n",
     "\n",
     "# Images dataset\n",
-    "new_images = new_file.create_dataset(\"images\", f['images'].shape, dtype='f')\n",
-    "new_images = f['images']\n",
+    "new_images = new_file.create_dataset(\"images\", data=f['images'])\n",
     "\n",
     "new_file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5091.9949999999999"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "duration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "84.866583333333338"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "duration/60."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -6628,7 +6604,7 @@
        "(541200, 13)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6646,7 +6622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 240,
    "metadata": {
     "collapsed": true
    },
@@ -6659,7 +6635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false
    },
@@ -6670,7 +6646,7 @@
        "[u'images', u'spikes', u'stimulus']"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6681,7 +6657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 242,
    "metadata": {
     "collapsed": false
    },
@@ -6692,7 +6668,7 @@
        "(25, 1519, 1007)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6703,7 +6679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 243,
    "metadata": {
     "collapsed": false
    },
@@ -6714,7 +6690,7 @@
        "(541200, 13)"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6725,7 +6701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 244,
    "metadata": {
     "collapsed": false
    },
@@ -6736,7 +6712,7 @@
        "(541200, 3)"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6747,7 +6723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 245,
    "metadata": {
     "collapsed": false
    },
@@ -6758,7 +6734,7 @@
        "array([ 14, 507, 963], dtype=int32)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6769,7 +6745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 246,
    "metadata": {
     "collapsed": false
    },
@@ -6780,13 +6756,108 @@
        "0"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.min(h['stimulus'][:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 210.3802706 ,  202.78896091,  209.37985054, ...,  209.01285382,\n",
+       "         236.38711222,  287.17474003],\n",
+       "       [ 168.95070458,  167.72639132,  196.80981562, ...,  283.89300379,\n",
+       "         286.45807854,  325.14921863],\n",
+       "       [ 164.00744402,  144.82802848,  160.32846339, ...,  312.29210523,\n",
+       "         359.72470327,  446.94218557],\n",
+       "       ..., \n",
+       "       [ 180.91762581,  190.33437088,  133.53108289, ...,  340.50378148,\n",
+       "         486.11722257,  360.37391896],\n",
+       "       [ 215.81056849,  153.57321072,  130.33209541, ...,  466.16587591,\n",
+       "         420.06027598,  308.82271819],\n",
+       "       [ 156.31022895,  155.98418714,  156.49888309, ...,  304.3207512 ,\n",
+       "         293.91622933,  317.33696303]])"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f['images'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 210.3802706 ,  202.78896091,  209.37985054, ...,  209.01285382,\n",
+       "         236.38711222,  287.17474003],\n",
+       "       [ 168.95070458,  167.72639132,  196.80981562, ...,  283.89300379,\n",
+       "         286.45807854,  325.14921863],\n",
+       "       [ 164.00744402,  144.82802848,  160.32846339, ...,  312.29210523,\n",
+       "         359.72470327,  446.94218557],\n",
+       "       ..., \n",
+       "       [ 180.91762581,  190.33437088,  133.53108289, ...,  340.50378148,\n",
+       "         486.11722257,  360.37391896],\n",
+       "       [ 215.81056849,  153.57321072,  130.33209541, ...,  466.16587591,\n",
+       "         420.06027598,  308.82271819],\n",
+       "       [ 156.31022895,  155.98418714,  156.49888309, ...,  304.3207512 ,\n",
+       "         293.91622933,  317.33696303]])"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h['images'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Not a file id (Not a file id)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-250-e7e6f6c5d522>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/h5py/_hl/files.pyc\u001b[0m in \u001b[0;36mclose\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    274\u001b[0m             \u001b[0;31m# Close file-resident objects first, then the files.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0;31m# Otherwise we get errors in MPI mode.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m             \u001b[0mid_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_obj_ids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m~\u001b[0m\u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOBJ_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m             \u001b[0mfile_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_obj_ids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOBJ_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/private/tmp/pip-build/h5py/h5py/_objects.c:2400)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/private/tmp/pip-build/h5py/h5py/_objects.c:2357)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.get_obj_ids (/private/tmp/pip-build/h5py/h5py/h5f.c:3039)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Not a file id (Not a file id)"
+     ]
+    }
+   ],
+   "source": [
+    "h.close()"
    ]
   },
   {
