removed rescale from load_natural_stimulus - default images should be in int8

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -9018,7 +9018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -9036,12 +9036,12 @@
     "    if len(bspk) >= max_duration:\n",
     "        all_binned_spikes.append(np.expand_dims(bspk[:max_duration], 1))\n",
     "        cell_idx.append(c) # cells 7, 15, 16 are skipped\n",
-    "all_spikes = np.hstack(all_binned_spikes)"
+    "all_spikes = np.hstack(all_binned_spikes).astype('int8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -9052,7 +9052,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9070,9 +9070,9 @@
    "outputs": [],
    "source": [
     "original_time = f['expt5/timestamps'][:]\n",
-    "original_values = f['expt5/stim'][:].astype('int')\n",
+    "original_values = f['expt5/stim'][:].astype('int16')\n",
     "original_values[:,0] -= 1 # convert from Matlab to Python indexing\n",
-    "filename = 'natural_scenes_stimulus_compressed_v2.h5'\n",
+    "filename = 'natural_scenes_stimulus_compressed_v4.h5'\n",
     "filepath = data_dir\n",
     "\n",
     "# Stimulus dataset\n",
@@ -9084,7 +9084,7 @@
     "else:\n",
     "    fname = filename\n",
     "new_file = h5py.File(fname, \"w\")\n",
-    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='i')\n",
+    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='i16')\n",
     "for idt,t in enumerate(new_time):\n",
     "    if np.bitwise_and((t % (60*10)) >= 0.0, (t % (60*10)) <= 0.01):\n",
     "        print '%d minutes / %f minutes' %(t/60., duration/60.)\n",
@@ -9103,7 +9103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -9114,13 +9114,35 @@
        "(541200, 13)"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_spikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int8')"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_spikes.dtype"
    ]
   },
   {
