Added dataset now that it's small enough

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -9018,7 +9018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -9041,7 +9041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -9052,7 +9052,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 8, 9, 10, 11, 12, 13]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9063,16 +9063,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 minutes / 90.199917 minutes\n",
+      "10 minutes / 90.199917 minutes\n",
+      "20 minutes / 90.199917 minutes\n",
+      "30 minutes / 90.199917 minutes\n",
+      "40 minutes / 90.199917 minutes\n",
+      "50 minutes / 90.199917 minutes\n",
+      "60 minutes / 90.199917 minutes\n",
+      "70 minutes / 90.199917 minutes\n",
+      "80 minutes / 90.199917 minutes\n",
+      "90 minutes / 90.199917 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "original_time = f['expt5/timestamps'][:]\n",
     "original_values = f['expt5/stim'][:].astype('int16')\n",
     "original_values[:,0] -= 1 # convert from Matlab to Python indexing\n",
-    "filename = 'natural_scenes_stimulus_compressed_v4.h5'\n",
+    "filename = 'natural_scenes_stimulus_compressed_v5.h5'\n",
     "filepath = data_dir\n",
     "\n",
     "# Stimulus dataset\n",
@@ -9084,13 +9101,14 @@
     "else:\n",
     "    fname = filename\n",
     "new_file = h5py.File(fname, \"w\")\n",
-    "new_values = new_file.create_dataset(\"stimulus\", new_values_shape, dtype='i16')\n",
+    "new_values = np.zeros(new_values_shape, dtype='int16')\n",
     "for idt,t in enumerate(new_time):\n",
     "    if np.bitwise_and((t % (60*10)) >= 0.0, (t % (60*10)) <= 0.01):\n",
     "        print '%d minutes / %f minutes' %(t/60., duration/60.)\n",
     "    time_til_frame = t - original_time\n",
     "    which_value = np.argmin(np.where(time_til_frame > 0, time_til_frame, large_number))\n",
     "    new_values[idt] = original_values[which_value]\n",
+    "new_stim = new_file.create_dataset(\"stimulus\", data=new_values)\n",
     "\n",
     "# Spikes dataset\n",
     "new_spikes = new_file.create_dataset(\"spikes\", data=all_spikes)\n",
@@ -9103,7 +9121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -9114,7 +9132,7 @@
        "(541200, 13)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9125,7 +9143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -9136,13 +9154,57 @@
        "dtype('int8')"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_spikes.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int16')"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_values.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int32')"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_values.dtype"
    ]
   },
   {
